--- a/Netflix/index.html
+++ b/Netflix/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="DKYZUJCTBeae3OwM6SIDJtUQkHPcIgv8mqAwPDq97r4" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
